start point for vers.2

--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,20 @@
 
 <body>
 
+<header class="header">
+
+</header>
+
+
   <div class="container">
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="root"></div>
-    <!--
+
+    <main class="main">
+
+      <div id="root"></div>
+      <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -46,6 +54,14 @@
     -->
 
   </div>
+
+
+  </main>
+
+  <footer class="footer">
+
+  </footer>
+
 </body>
 
 </html>
