--- a/public/index.html
+++ b/public/index.html
@@ -23,26 +23,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<header class="header">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
 
-</header>
-
-
-  <div class="container">
-
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-
-
-    <main class="main">
-
-      <div id="root"></div>
-      <!--
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -52,15 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
-  </div>
-
-
-  </main>
-
-  <footer class="footer">
-
-  </footer>
 
 </body>
 
